# tts-hub

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh  setup.sh  test.html
app/: __init__.py  audio.py  bootstrap.py  config.py  main.py  registry.py  schemas.py
app/api/: routes.py
app/engines/: __init__.py  base.py  kokoro_engine.py
tests/: test_api.py
