[project]
name = "tts-hub"
version = "0.1.0"
description = "Pluggable self-hosted TTS server (Kokoro-82M first), payload-in / audio-out."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "kokoro>=0.9.4",
    "soundfile>=0.12",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
tts-hub = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
filterwarnings = ["ignore"]
